--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+/.quarto/
+/_site/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -169,3 +172,5 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+/.quarto/
